rename extension to Bookmark Tweets

--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Budget Manager</title>
+		<title>Bookmark Tweets</title>
 		<script src="./popup.js"></script>
 		<!-- <script src="jquery-3.5.1.min.js"></script> -->
 	</head>
 	<body>
-		<h1>Budger Manager</h1>
-		<h2>Total Spend: <span id="total">0</span></h2>
-		<h2>Limit:<span id="limit"></span></h2>
-		<h3>Enter Amount</h3>
-		<input type="text" id="amount" />
-		<input type="submit" id="spendAmount" value="Spend" />
+		<h1>Bookmark Tweets</h1>
+		<h4>Sign out</h4>
+		<h4>Sign out</h4>
+		<h4>Open my list</h4>
 	</body>
 </html>
