--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
 		<!-- <script src="jquery-3.5.1.min.js"></script> -->
 	</head>
 	<body>
-		<h1>Bookmark Tweets</h1>
+		<h1 id="bookmark-header">Bookmark Tweets</h1>
 		<h4>Sign out</h4>
 		<h4>Sign out</h4>
 		<h4>Open my list</h4>
