--- a/popup.html
+++ b/popup.html
@@ -7,58 +7,106 @@
 		<!-- <script src="jquery-3.5.1.min.js"></script> -->
 	</head>
 	<body>
-		<div class="header">
-			<svg
-				width="32"
-				height="35"
-				viewBox="0 0 32 35"
-				fill="none"
-				xmlns="http://www.w3.org/2000/svg"
-			>
-				<path
-					fill-rule="evenodd"
-					clip-rule="evenodd"
-					d="M6.71939 12.6659L23.2267 22.1964C23.6247 22.4262 23.9151 22.8046 24.034 23.2486C24.153 23.6925 24.0907 24.1655 23.8609 24.5635L18.9513 33.0672C18.7215 33.4652 18.343 33.7556 17.8991 33.8746C17.4552 33.9935 16.9822 33.9313 16.5842 33.7015L1.57759 25.0374C1.17959 24.8076 0.889172 24.4291 0.770226 23.9852C0.65128 23.5413 0.713549 23.0683 0.943335 22.6703L6.71939 12.6659Z"
-					fill="#9966FF"
-				/>
-				<path
-					d="M22.5799 6.3136L10.3413 7.60585C10.0767 7.63373 9.82241 7.72377 9.59921 7.86861C9.37602 8.01346 9.19023 8.20902 9.057 8.43933L0.947531 22.4853C0.613294 23.0643 0.657342 23.8928 1.05551 24.5671C1.13451 23.755 1.65346 23.0722 2.47027 23.0214L15.2326 21.6729C15.4972 21.645 15.7515 21.555 15.9747 21.4101C16.1979 21.2653 16.3836 21.0697 16.5169 20.8394L23.8093 8.20853C23.9256 8.00604 23.9837 7.7754 23.9774 7.542C23.971 7.30859 23.9004 7.08146 23.7734 6.88559C23.6463 6.68971 23.4676 6.53268 23.2571 6.43176C23.0465 6.33085 22.8122 6.28997 22.5799 6.3136Z"
-					fill="url(#paint0_linear)"
-				/>
-				<path
-					fill-rule="evenodd"
-					clip-rule="evenodd"
-					d="M18.7045 17.0502L16.5101 20.8511C16.24 21.3189 15.7679 21.6234 15.2291 21.6787L2.4702 23.0214C1.65339 23.0722 1.13781 23.7492 1.05544 24.5671L1.06219 24.5554C0.792431 24.1046 0.68541 23.575 0.758991 23.0549C0.798759 22.8303 0.876174 22.614 0.987971 22.4152L7.74023 10.7199L18.7045 17.0502Z"
-					fill="url(#paint1_linear)"
-				/>
-				<defs>
-					<linearGradient
-						id="paint0_linear"
-						x1="18.0836"
-						y1="5.47197"
-						x2="11.0984"
-						y2="17.5707"
-						gradientUnits="userSpaceOnUse"
+		<div class="layout">
+			<div>
+				<div class="align-center list-item hover" id="my-list">
+					<svg
+						width="24"
+						height="24"
+						viewBox="0 0 24 24"
+						fill="none"
+						xmlns="http://www.w3.org/2000/svg"
+						class="list-item"
 					>
-						<stop offset="0.317708" stop-color="#3CC8F3" />
-						<stop offset="1" stop-color="#0090BC" />
-					</linearGradient>
-					<linearGradient
-						id="paint1_linear"
-						x1="4.7321"
-						y1="15.9301"
-						x2="16.9595"
-						y2="22.9896"
-						gradientUnits="userSpaceOnUse"
+						<path
+							d="M20.8636 20.9312C20.8636 21.2147 20.7535 21.4865 20.5574 21.687C20.3614 21.8874 20.0955 22 19.8182 22H5.18182C4.90455 22 4.63863 21.8874 4.44257 21.687C4.24651 21.4865 4.13636 21.2147 4.13636 20.9312V11.3121H1L11.7964 1.27827C11.9889 1.09922 12.2398 1 12.5 1C12.7602 1 13.0111 1.09922 13.2036 1.27827L24 11.3121H20.8636V20.9312ZM12.5 17.7248L16.0117 14.1348C16.2301 13.9115 16.4034 13.6464 16.5216 13.3546C16.6398 13.0628 16.7006 12.7501 16.7006 12.4343C16.7006 12.1185 16.6398 11.8058 16.5216 11.514C16.4034 11.2223 16.2301 10.9572 16.0117 10.7339C15.7933 10.5106 15.5339 10.3334 15.2485 10.2126C14.9632 10.0917 14.6573 10.0295 14.3484 10.0295C14.0395 10.0295 13.7336 10.0917 13.4482 10.2126C13.1628 10.3334 12.9035 10.5106 12.685 10.7339L12.5 10.923L12.315 10.7339C12.0965 10.5106 11.8372 10.3334 11.5518 10.2126C11.2664 10.0917 10.9605 10.0295 10.6516 10.0295C10.3427 10.0295 10.0368 10.0917 9.75146 10.2126C9.46606 10.3334 9.20675 10.5106 8.98832 10.7339C8.76989 10.9572 8.59662 11.2223 8.47841 11.514C8.36019 11.8058 8.29935 12.1185 8.29935 12.4343C8.29935 12.7501 8.36019 13.0628 8.47841 13.3546C8.59662 13.6464 8.76989 13.9115 8.98832 14.1348L12.5 17.7248Z"
+							fill="black"
+						/>
+					</svg>
+					<h2 class="list-item">My List</h2>
+				</div>
+
+				<div class="align-center list-item hover">
+					<svg
+						width="20"
+						height="18"
+						viewBox="0 0 20 18"
+						fill="none"
+						xmlns="http://www.w3.org/2000/svg"
+						class="list-item"
 					>
-						<stop stop-color="#9966FF" />
-						<stop offset="1" stop-color="#1C0054" />
-					</linearGradient>
-				</defs>
-			</svg>
-			<h1>tweetflick</h1>
+						<path
+							d="M10.414 2H19C19.2652 2 19.5196 2.10536 19.7071 2.29289C19.8946 2.48043 20 2.73478 20 3V17C20 17.2652 19.8946 17.5196 19.7071 17.7071C19.5196 17.8946 19.2652 18 19 18H1C0.734784 18 0.48043 17.8946 0.292893 17.7071C0.105357 17.5196 0 17.2652 0 17V1C0 0.734784 0.105357 0.48043 0.292893 0.292893C0.48043 0.105357 0.734784 0 1 0H8.414L10.414 2Z"
+							fill="black"
+						/>
+					</svg>
+
+					<h2 class="list-item">My Archived</h2>
+				</div>
+			</div>
+
+			<div class="action-section">
+				<button id="signout" class="center">Sign Out</button>
+			</div>
+
+			<div class="align-center full-icon">
+				<svg
+					width="15"
+					height="17"
+					viewBox="0 0 15 17"
+					fill="none"
+					xmlns="http://www.w3.org/2000/svg"
+				>
+					<path
+						fill-rule="evenodd"
+						clip-rule="evenodd"
+						d="M3.15771 6.36206L10.9152 10.8408C11.1022 10.9488 11.2387 11.1267 11.2946 11.3353C11.3505 11.5439 11.3212 11.7662 11.2133 11.9532L8.90601 15.9495C8.79802 16.1366 8.62016 16.273 8.41155 16.3289C8.20293 16.3848 7.98066 16.3556 7.79362 16.2476L0.741362 12.176C0.554325 12.068 0.417845 11.8901 0.361947 11.6815C0.306049 11.4729 0.335312 11.2506 0.443299 11.0636L3.15771 6.36206Z"
+						fill="#9966FF"
+					/>
+					<path
+						d="M10.6124 3.37743L4.86092 3.98471C4.73657 3.99781 4.61708 4.04012 4.51219 4.10819C4.4073 4.17626 4.31999 4.26816 4.25738 4.3764L0.446393 10.9772C0.289321 11.2493 0.310022 11.6386 0.49714 11.9555C0.534262 11.5739 0.778141 11.253 1.162 11.2292L7.15956 10.5954C7.28391 10.5823 7.4034 10.54 7.50829 10.4719C7.61318 10.4039 7.70049 10.312 7.7631 10.2037L11.1901 4.26794C11.2448 4.17278 11.2721 4.06439 11.2691 3.9547C11.2661 3.84502 11.2329 3.73828 11.1732 3.64623C11.1135 3.55418 11.0295 3.48038 10.9306 3.43296C10.8316 3.38553 10.7215 3.36632 10.6124 3.37743Z"
+						fill="url(#paint0_linear)"
+					/>
+					<path
+						fill-rule="evenodd"
+						clip-rule="evenodd"
+						d="M8.79005 8.42236L7.75877 10.2086C7.63184 10.4284 7.41001 10.5715 7.15681 10.5975L1.16084 11.2285C0.776981 11.2524 0.534689 11.5705 0.49598 11.9549L0.499153 11.9494C0.372381 11.7376 0.322087 11.4887 0.356665 11.2442C0.375354 11.1387 0.411735 11.037 0.464273 10.9436L3.63745 5.44751L8.79005 8.42236Z"
+						fill="url(#paint1_linear)"
+					/>
+					<defs>
+						<linearGradient
+							id="paint0_linear"
+							x1="8.49939"
+							y1="2.98191"
+							x2="5.21673"
+							y2="8.66763"
+							gradientUnits="userSpaceOnUse"
+						>
+							<stop offset="0.317708" stop-color="#3CC8F3" />
+							<stop offset="1" stop-color="#0090BC" />
+						</linearGradient>
+						<linearGradient
+							id="paint1_linear"
+							x1="2.2238"
+							y1="7.89602"
+							x2="7.96998"
+							y2="11.2136"
+							gradientUnits="userSpaceOnUse"
+						>
+							<stop stop-color="#9966FF" />
+							<stop offset="1" stop-color="#1C0054" />
+						</linearGradient>
+					</defs>
+				</svg>
+
+				<h3>tweetflick</h3>
+			</div>
+
+			<footer>
+				<label>&#xa9; 2020 tweetflick</label>
+				<label>About</label>
+				<label>Support</label>
+			</footer>
 		</div>
-		<h4 id="signout" class="hover">Sign Out</h4>
-		<h4 id="my-list" class="hover">Open my list</h4>
 	</body>
 </html>
